force-app/main/default/objects/FS_Installation__c/fields/FS_Eq_Manifold_Qty__c.field-meta.xml
<CustomField>
    <fullName>FS_Eq_Manifold_Qty__c</fullName>
    <label>Manifold QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>