force-app/main/default/objects/FS_Installation__c/fields/FS_Eq_SS_IM_Soft_Ice_Make__c.field-meta.xml
<CustomField>
    <fullName>FS_Eq_SS_IM_Soft_Ice_Make__c</fullName>
    <label>IM Make (9000 Series)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follett</fullName>
            </value>
            <value>
                <fullName>Hoshizaki</fullName>
            </value>
            <value>
                <fullName>Scotsman</fullName>
            </value>
            <value>
                <fullName>Manitowoc</fullName>
            </value>
            <value>
                <fullName>Ice-O-Matic</fullName>
            </value>
            <value>
                <fullName>Cornelius</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>