force-app/main/default/objects/FS_Installation__c/fields/FS_Equipment_Booked__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equip Activity Entered</label>
    <type>Checkbox</type>
</CustomField>