force-app/main/default/objects/FS_Installation__c/fields/FS_Equipment_Placement_TI_CSEP__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Placement_TI_CSEP__c</fullName>
    <label>Equipment Placement (8000 Series)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>