force-app/main/default/objects/FS_Installation__c/fields/FS_Equipment_Placement_TI_SSEP__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Placement_TI_SSEP__c</fullName>
    <label>Equipment Placement (9000 Series)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>