force-app/main/default/objects/FS_Installation__c/fields/FS_Equipment_Planning_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Planning_Date__c</fullName>
    <formula>today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Planning Date</label>
    <type>Date</type>
</CustomField>