force-app/main/default/objects/FS_Installation__c/fields/FS_Execution_Plan_100_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_100_Complete__c</fullName>
    <formula>If( FS_Install_Complete__c,true, 

If( AND( FS_Execution_Plan__r.FS_Related_Chain__r.Name &lt;&gt;&quot;Jack In The Box&quot; , 
FS_Outlet_CS_Status__c =&quot;Complete&quot;, 
FS_OB_Info_Status__c =&quot;Complete&quot; ,  
FS_BrandStatus__c=&quot;Complete&quot; , 
ISPICKVAL(FS_Execution_Plan_Final_Approval_PM__c,&#39;Approved&#39;)),true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Plan 100% Complete?</label>
    <type>Checkbox</type>
</CustomField>