force-app/main/default/objects/FS_Installation__c/fields/FS_Execution_Plan__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan__c</fullName>
    <label>Execution Plan</label>
    <referenceTo>FS_Execution_Plan__c</referenceTo>
    <relationshipLabel>Outlet Info Summary</relationshipLabel>
    <relationshipName>Outlet_Info_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>