force-app/main/default/objects/FS_Installation__c/fields/FS_Execution_Plan_Final_Approval__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Final_Approval__c</fullName>
    <formula>if( ISPICKVAL(FS_Execution_Plan_Final_Approval_PM__c,&quot;Approved&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Plan Final Approval</label>
    <type>Checkbox</type>
</CustomField>