force-app/main/default/objects/FS_Installation__c/fields/FS_Execution_Plan_Final_Approval_PM__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan_Final_Approval_PM__c</fullName>
    <description>Execution Plan Final Approval (PM)</description>
    <label>Execution Plan Final Approval (PM)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>