force-app/main/default/objects/FS_Installation__c/fields/FS_External_Modem__c.field-meta.xml
<CustomField>
    <fullName>FS_External_Modem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Modem</label>
    <type>Checkbox</type>
</CustomField>