force-app/main/default/objects/FS_Installation__c/fields/FS_Field_Outlet_Zip_Market_Activation_Da__c.field-meta.xml
<CustomField>
    <fullName>FS_Field_Outlet_Zip_Market_Activation_Da__c</fullName>
    <formula>today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field: Outlet Zip - Market Activation Da</label>
    <type>Date</type>
</CustomField>