force-app/main/default/objects/FS_Installation__c/fields/FS_Final_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Final_Delivery_Method__c</fullName>
    <formula>TEXT(FS_Outlet__r.FS_Requested_Delivery_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Delivery Method</label>
    <type>Text</type>
</CustomField>