force-app/main/default/objects/FS_Installation__c/fields/FS_Final_Delivery_Methods__c.field-meta.xml
<CustomField>
    <fullName>FS_Final_Delivery_Methods__c</fullName>
    <formula>FS_Outlet__r.FS_Final_Delivery_Method__c</formula>
    <label>Final Delivery Method</label>
    <type>Text</type>
</CustomField>