force-app/main/default/objects/FS_Installation__c/fields/FS_Final_Order_Methods__c.field-meta.xml
<CustomField>
    <fullName>FS_Final_Order_Methods__c</fullName>
    <formula>FS_Outlet__r.FS_Final_Order_Method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Order Method</label>
    <type>Text</type>
</CustomField>