force-app/main/default/objects/FS_Installation__c/fields/FS_Finished_Ounces_2__c.field-meta.xml
<CustomField>
    <fullName>FS_Finished_Ounces_2__c</fullName>
    <label>Finished Ounces 2</label>
    <length>11</length>
    <type>Text</type>
</CustomField>