force-app/main/default/objects/FS_Installation__c/fields/FS_Fire_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Fire_Up_Date__c</fullName>
    <description>Fire-Up Date</description>
    <inlineHelpText>Please ensure the On-Boarding date is equal or greater than the Fire Up date
(This may not apply to a PIA replacement form )</inlineHelpText>
    <label>Fire-Up Date</label>
    <type>Date</type>
</CustomField>