force-app/main/default/objects/FS_Installation__c/fields/FS_FireUp_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_FireUp_Time__c</fullName>
    <label>Projected Fire-Up Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>