force-app/main/default/objects/FS_Installation__c/fields/FS_Flavor_Setup_Req_Completed_by_CDM__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor_Setup_Req_Completed_by_CDM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flavor Setup Req Completed by CDM</label>
    <type>Checkbox</type>
</CustomField>