force-app/main/default/objects/FS_Installation__c/fields/FS_Freestyle_Support_Tool_Case__c.field-meta.xml
<CustomField>
    <fullName>FS_Freestyle_Support_Tool_Case__c</fullName>
    <inlineHelpText>NA - This transaction was archived before the case # could be created.</inlineHelpText>
    <label>&#39;Freestyle Support Tool&#39; Case#</label>
    <length>16</length>
    <type>Text</type>
</CustomField>