force-app/main/default/objects/FS_Installation__c/fields/FS_FreeTextField4__c.field-meta.xml
<CustomField>
    <fullName>FS_FreeTextField4__c</fullName>
    <label>Free Form Text Field 4</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>