force-app/main/default/objects/FS_Installation__c/fields/FS_GC_Coordination_to_be_done_by__c.field-meta.xml
<CustomField>
    <fullName>FS_GC_Coordination_to_be_done_by__c</fullName>
    <label>GC - Coordination to be done by?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>