force-app/main/default/objects/FS_Installation__c/fields/FS_General_Contractor_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Contractor_Contact_Email__c</fullName>
    <label>General Contractor Contact Email</label>
    <type>Email</type>
</CustomField>