force-app/main/default/objects/FS_Installation__c/fields/FS_General_Contractor_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Contractor_Contact_Name__c</fullName>
    <label>General Contractor Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>