force-app/main/default/objects/FS_Installation__c/fields/FS_General_Contractor_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Contractor_Contact_Phone__c</fullName>
    <label>General Contractor Contact Phone</label>
    <type>Phone</type>
</CustomField>