force-app/main/default/objects/FS_Installation__c/fields/FS_General_Contractor_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Contractor_Notes__c</fullName>
    <label>Free Form Text Field 2</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>