force-app/main/default/objects/FS_Installation__c/fields/FS_Hard_Wire_Needed__c.field-meta.xml
<CustomField>
    <fullName>FS_Hard_Wire_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Wire Needed</label>
    <type>Checkbox</type>
</CustomField>