force-app/main/default/objects/FS_Installation__c/fields/FS_Headquarters_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Headquarters_ACN__c</fullName>
    <formula>FS_Execution_Plan__r.FS_Headquarters__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Headquarters ACN</label>
    <type>Text</type>
</CustomField>