force-app/main/default/objects/FS_Installation__c/fields/FS_Hide_Dasani1__c.field-meta.xml
<CustomField>
    <fullName>FS_Hide_Dasani1__c</fullName>
    <label>Dasani 8000</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>