force-app/main/default/objects/FS_Installation__c/fields/FS_Hide_Dasani2__c.field-meta.xml
<CustomField>
    <fullName>FS_Hide_Dasani2__c</fullName>
    <label>Dasani 9000</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>