force-app/main/default/objects/FS_Installation__c/fields/FS_HowManyDaysAfterInstallOnboarding__c.field-meta.xml
<CustomField>
    <fullName>FS_HowManyDaysAfterInstallOnboarding__c</fullName>
    <label>How Many Days After Install Onboarding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>