force-app/main/default/objects/FS_Installation__c/fields/FS_ICC_Customer__c.field-meta.xml
<CustomField>
    <fullName>FS_ICC_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICC - Customer</label>
    <type>Checkbox</type>
</CustomField>