force-app/main/default/objects/FS_Installation__c/fields/FS_Ice_maker_and_water_filter_comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Ice_maker_and_water_filter_comments__c</fullName>
    <label>Ice maker and water filter comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>