force-app/main/default/objects/FS_Installation__c/fields/FS_Ice_Maker_Company__c.field-meta.xml
<CustomField>
    <fullName>FS_Ice_Maker_Company__c</fullName>
    <description>changed from single picklist to multi select picklist</description>
    <label>Ice Maker Company</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follett</fullName>
            </value>
            <value>
                <fullName>Hoshizaki</fullName>
            </value>
            <value>
                <fullName>Scotsman</fullName>
            </value>
            <value>
                <fullName>Manitowoc</fullName>
            </value>
            <value>
                <fullName>Ice-O-Matic</fullName>
            </value>
            <value>
                <fullName>Cornelius</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>