force-app/main/default/objects/FS_Installation__c/fields/FS_Ice_Maker_Vendor_Coordination_Req__c.field-meta.xml
<CustomField>
    <fullName>FS_Ice_Maker_Vendor_Coordination_Req__c</fullName>
    <label>Ice Maker Vendor Coordination Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>