force-app/main/default/objects/FS_Installation__c/fields/FS_Icemaker_Coordination_Instructions__c.field-meta.xml
<CustomField>
    <fullName>FS_Icemaker_Coordination_Instructions__c</fullName>
    <label>Icemaker Coordination Instructions</label>
    <type>TextArea</type>
</CustomField>