force-app/main/default/objects/FS_Installation__c/fields/FS_iLearn_required__c.field-meta.xml
<CustomField>
    <fullName>FS_iLearn_required__c</fullName>
    <label>iLearn required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>