force-app/main/default/objects/FS_Installation__c/fields/FS_iLearn_Research_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_iLearn_Research_Comments__c</fullName>
    <inlineHelpText>Relabeled Research Comments to Refresher Training Request Comments</inlineHelpText>
    <label>Refresher Training Request Comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>