force-app/main/default/objects/FS_Installation__c/fields/FS_iLearn_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_iLearn_Ship_Date__c</fullName>
    <inlineHelpText>Relabeled iLearn Ship Date to Refresher Training Requested Date</inlineHelpText>
    <label>Refresher Training Requested Date</label>
    <type>Date</type>
</CustomField>