force-app/main/default/objects/FS_Installation__c/fields/FS_iLearn_Tablet_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>FS_iLearn_Tablet_Confirmed__c</fullName>
    <label>iLearn Tablet Confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Participating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>