force-app/main/default/objects/FS_Installation__c/fields/FS_iLearn_Tablet_Located__c.field-meta.xml
<CustomField>
    <fullName>FS_iLearn_Tablet_Located__c</fullName>
    <label>iLearn Tablet Located?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Located</fullName>
            </value>
            <value>
                <fullName>SP Located- Deliverying to Outlet</fullName>
            </value>
            <value>
                <fullName>Unable to Locate- Advise Americhip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>