force-app/main/default/objects/FS_Installation__c/fields/FS_iLearn_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_iLearn_Tracking_Number__c</fullName>
    <label>iLearn Tracking Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>