force-app/main/default/objects/FS_Installation__c/fields/FS_IM_Confirmation_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_IM_Confirmation_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>