force-app/main/default/objects/FS_Installation__c/fields/FS_Initial_Order_Days_Stock__c.field-meta.xml
<CustomField>
    <fullName>FS_Initial_Order_Days_Stock__c</fullName>
    <formula>21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Order - # Days Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>