force-app/main/default/objects/FS_Installation__c/fields/FS_Install_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Complete</label>
    <type>Checkbox</type>
</CustomField>