force-app/main/default/objects/FS_Installation__c/fields/FS_Install_Date2__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Date2__c</fullName>
    <label>Install Date2</label>
    <type>Date</type>
</CustomField>