force-app/main/default/objects/FS_Installation__c/fields/FS_Install_Date_Reschedule_Instance__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Date_Reschedule_Instance__c</fullName>
    <description>Install Date Reschedule Instance</description>
    <formula>IF (FS_no_of_Reschedules__c&gt;3, TEXT(FS_no_of_Reschedules__c)+&#39;th Reschedule&#39;,
 IF(FS_no_of_Reschedules__c=3,&#39;3rd Reschedule&#39;,
  IF(FS_no_of_Reschedules__c=2,&#39;2nd Reschedule&#39;,
   IF(FS_no_of_Reschedules__c=1,&#39;1st Reschedule&#39;,&#39;No Reschedules&#39;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Date Reschedule Instance</label>
    <type>Text</type>
</CustomField>