force-app/main/default/objects/FS_Installation__c/fields/FS_Install_Date_Validation_Bypass_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Date_Validation_Bypass_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Install Date Validation Bypass Check</label>
    <type>Checkbox</type>
</CustomField>