force-app/main/default/objects/FS_Installation__c/fields/FS_Install_Notes_Comments_Timestamp_Text__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Notes_Comments_Timestamp_Text__c</fullName>
    <label>Add New Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>