force-app/main/default/objects/FS_Installation__c/fields/FS_Install_Reconnect_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Reconnect_Date__c</fullName>
    <label>Initially Install/Reconnect Date</label>
    <type>Date</type>
</CustomField>