force-app/main/default/objects/FS_Installation__c/fields/FS_Install_Reconnect_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Reconnect_Date_Formula__c</fullName>
    <formula>If(FS_Relocation_from_old_outlet_to_SP_is__c,FS_Scheduled_Install_Date__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install/Reconnect Date</label>
    <type>Date</type>
</CustomField>