force-app/main/default/objects/FS_Installation__c/fields/FS_Install_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Install_Time__c</fullName>
    <label>Install Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>