force-app/main/default/objects/FS_Installation__c/fields/FS_Installation_Con_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Con_Alternate_Phone__c</fullName>
    <label>Installation Contact Alternate Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>