force-app/main/default/objects/FS_Installation__c/fields/FS_Installation_Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Overall_Status__c</fullName>
    <formula>Overall_Status2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS Installation Status</label>
    <type>Text</type>
</CustomField>