force-app/main/default/objects/FS_Installation__c/fields/FS_Installation_PC_AC_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_PC_AC_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation PC/AC 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InstallationsKeoz</relationshipName>
    <type>Lookup</type>
</CustomField>