force-app/main/default/objects/FS_Installation__c/fields/FS_Installation_PC_AC_2__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_PC_AC_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation PC/AC 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InstallationsKepJ</relationshipName>
    <type>Lookup</type>
</CustomField>