force-app/main/default/objects/FS_Installation__c/fields/FS_Installation_PIC_AC__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_PIC_AC__c</fullName>
    <label>Installation PC/AC 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>