force-app/main/default/objects/FS_Installation__c/fields/FS_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Status__c</fullName>
    <formula>IF( OR(AND(TEXT(FS_Scheduled_Install_Date__c) = &#39;&#39;,FS_Pending_for_Reschedule__c),(TEXT(FS_Original_Install_Date__c) = &#39;&#39;)) , &#39;Pending&#39;,IF( AND(TEXT(FS_Original_Install_Date__c) != &#39;&#39;, NOT (FS_Install_Complete__c)) , &#39;Scheduled&#39;,
  IF( FS_Install_Complete__c , &#39;Complete&#39;, &#39;&#39;)))</formula>
    <label>Installation Status</label>
    <type>Text</type>
</CustomField>