force-app/main/default/objects/FS_Installation__c/fields/FS_Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Type__c</fullName>
    <formula>IF( AND(FS_Eq_SS_Dispenser_QTY__c &gt; 0 , FS_Eq_CS_Dispenser_QTY__c &gt; 0) , &#39;Both CS and SS&#39;, 
IF( AND(FS_Eq_SS_Dispenser_QTY__c = 0 , FS_Eq_CS_Dispenser_QTY__c &gt; 0), &#39;Crew Serve&#39;, 
IF( AND(FS_Eq_SS_Dispenser_QTY__c &gt; 0 , FS_Eq_CS_Dispenser_QTY__c = 0) , &#39;Self Serve&#39; , &#39;&#39; )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training for CS or SS?</label>
    <type>Text</type>
</CustomField>