force-app/main/default/objects/FS_Installation__c/fields/FS_InstallationNew_outlet_Complete_date__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallationNew_outlet_Complete_date__c</fullName>
    <label>Installation in new outlet Complete date</label>
    <type>DateTime</type>
</CustomField>